--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,5 @@
-# Prerequisites
-*.d
-
-# Compiled Object files
-*.slo
-*.lo
-*.o
-*.obj
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
-
-# Compiled Static libraries
-*.lai
-*.la
-*.a
-*.lib
-
-# Executables
-*.exe
-*.out
-*.app
-
-## Project files ######
-.pioenvs
-.piolibdeps
-.clang_complete
-.gcc-flags.json
-build
-
-## Visual Studio Code specific ######
-.vscode
+.pio
 .vscode/.browse.c_cpp.db*
 .vscode/c_cpp_properties.json
 .vscode/launch.json
-*.bak
-
+.vscode/ipch
