--- a/platformio.ini
+++ b/platformio.ini
@@ -13,11 +13,11 @@
 
 [env:nanoatmega328]
 platform = atmelavr
-board = nanoatmega328
-;board = nanoatmega328new
+;board = nanoatmega328
+board = nanoatmega328new
 framework = arduino
 monitor_speed = 115200
-monitor_port = COM21
-upload_port = COM21
+monitor_port = COM5
+upload_port = COM5
 
 ;lib_deps
