--- a/platformio.ini
+++ b/platformio.ini
@@ -9,15 +9,21 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;src_dir = ...
 
 [env:nanoatmega328]
 platform = atmelavr
-;board = nanoatmega328
-board = nanoatmega328new
+board = nanoatmega328
 framework = arduino
 monitor_speed = 115200
 monitor_port = COM5
 upload_port = COM5
+lib_deps = milesburton/DallasTemperature@^3.9.1
 
-;lib_deps
+[env:nanoatmega328new]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+monitor_speed = 115200
+monitor_port = COM4
+upload_port = COM4
+lib_deps = milesburton/DallasTemperature@^3.9.1
