Refactoring and new features
- timed switches (currently default time 15 secs)
- long press detection (pressing and press)
- dimmer (PWM devices)

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,15 +15,39 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 monitor_speed = 115200
-monitor_port = COM5
-upload_port = COM5
+;monitor_port = COM5
+upload_port = COM*
 lib_deps = milesburton/DallasTemperature@^3.9.1
+build_flags =
+	-DCLI_SUPPORT
 
 [env:nanoatmega328new]
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
 monitor_speed = 115200
-monitor_port = COM4
-upload_port = COM4
-lib_deps = milesburton/DallasTemperature@^3.9.1
+#monitor_port = COM*
+upload_port = COM*
+;lib_deps = milesburton/DallasTemperature@^3.9.1
+debug_tool = simavr
+debug_build_flags = -Og -ggdb3 -g3
+build_flags =
+	-DDEBUG
+	-DCLI_SUPPORT
+; cli = 160 bytes RAM
+
+[env:simulation]
+platform = atmelavr
+board = nanoatmega328new
+framework = arduino
+test_build_project_src = yes
+;test_transport = native
+test_ignore = test_embedded
+debug_tool = simavr
+build_flags =
+	-DAVRSIM
+	-DDEBUG
+# debug_init_break = 
+debug_build_flags = -Og -ggdb3 -g3
+
+
