--- a/platformio.ini
+++ b/platformio.ini
@@ -10,30 +10,38 @@
 
 [platformio]
 
-[env:nanoatmega328]
+[env:nanoatmega328-deploy]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
 monitor_speed = 115200
-;monitor_port = COM5
+monitor_port = COM8
 upload_port = COM*
-lib_deps = milesburton/DallasTemperature@^3.9.1
+build_flags =
+
+[env:nanoatmega328-debug]
+platform = atmelavr
+board = nanoatmega328
+framework = arduino
+monitor_speed = 115200
+monitor_port = COM8
+upload_port = COM*
 build_flags =
 	-DCLI_SUPPORT
+	-DDEBUG -DEXT_DEBUG
 
 [env:nanoatmega328new]
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
 monitor_speed = 115200
-#monitor_port = COM*
+monitor_port = COM5
 upload_port = COM*
-;lib_deps = milesburton/DallasTemperature@^3.9.1
 debug_tool = simavr
 debug_build_flags = -Og -ggdb3 -g3
-build_flags =
-	-DDEBUG
-	-DCLI_SUPPORT
+build_flags = -DCLI_SUPPORT
+	-DDEBUG -DEXT_DEBUG
+
 ; cli = 160 bytes RAM
 
 [env:simulation]
@@ -47,7 +55,7 @@ debug_tool = simavr
 build_flags =
 	-DAVRSIM
 	-DDEBUG
-# debug_init_break = 
+# debug_init_break =
 debug_build_flags = -Og -ggdb3 -g3
 
 
