Clean up host interface (ongoing)
Introduce main header
Minor optimizations

--- a/platformio.ini
+++ b/platformio.ini
@@ -28,7 +28,7 @@ monitor_port = COM8
 upload_port = COM*
 build_flags =
 	-DCLI_SUPPORT
-	-DDEBUG -DEXT_DEBUG
+	-DDEBUG -DEXT_DEBUG -DCHGID_CMD
 
 [env:nanoatmega328new]
 platform = atmelavr
