--- a/platformio.ini
+++ b/platformio.ini
@@ -10,31 +10,37 @@
 
 [platformio]
 
-[env:nanoatmega328-deploy]
+[common]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
 monitor_speed = 115200
+
+[env:nanoatmega328-deploy]
+platform                = ${common.platform}
+board                   = ${common.board}
+framework               = ${common.framework}
+monitor_speed           = ${common.monitor_speed}
 monitor_port = COM8
 upload_port = COM*
 build_flags =
 
 [env:nanoatmega328-debug]
-platform = atmelavr
-board = nanoatmega328
-framework = arduino
-monitor_speed = 115200
-monitor_port = COM8
+platform                = ${common.platform}
+board                   = ${common.board}
+framework               = ${common.framework}
+monitor_speed           = ${common.monitor_speed}
+monitor_port = COM4
 upload_port = COM*
 build_flags =
 	-DCLI_SUPPORT
 	-DDEBUG -DEXT_DEBUG -DCHGID_CMD
 
 [env:nanoatmega328new]
-platform = atmelavr
-board = nanoatmega328new
-framework = arduino
-monitor_speed = 115200
+platform                = ${common.platform}
+board 					= nanoatmega328new
+framework               = ${common.framework}
+monitor_speed           = ${common.monitor_speed}
 monitor_port = COM5
 upload_port = COM*
 debug_tool = simavr
@@ -45,9 +51,9 @@ build_flags = -DCLI_SUPPORT
 ; cli = 160 bytes RAM
 
 [env:simulation]
-platform = atmelavr
-board = nanoatmega328new
-framework = arduino
+platform                = ${common.platform}
+board 					= nanoatmega328new
+framework               = ${common.framework}
 test_build_project_src = yes
 ;test_transport = native
 test_ignore = test_embedded
