--- a/platformio.ini
+++ b/platformio.ini
@@ -15,53 +15,79 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 monitor_speed = 115200
+port = COM5
+compile_flags = -Wextra
+	-Wswitch-default
+	-Wshadow
+	-Wmissing-noreturn
+
+compile_flags_pro = ${compile_flags}
+	-Wmissing-format-attribute
+	-Wformat-security
+	-Wmissing-declarations
+	-Wredundant-decls
+	-Winit-self
+	-Wundef
+	-Waggregate-return
+	-Wcast-align
+	-Wwrite-strings
+	-Wformat-nonliteral
+	-Wswitch-enum
+	-Winline
+	-Wshadow
 
 [env:nanoatmega328-deploy]
-platform                = ${common.platform}
-board                   = ${common.board}
-framework               = ${common.framework}
-monitor_speed           = ${common.monitor_speed}
-monitor_port = COM8
+platform = ${common.platform}
+board = ${common.board}
+framework = ${common.framework}
+monitor_speed = ${common.monitor_speed}
+monitor_port = ${common.port}
 upload_port = COM*
-build_flags =
+build_flags = ${common.compile_flags_pro}
+lib_deps =
+	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
+	rlogiacco/CircularBuffer@^1.3.3
 
 [env:nanoatmega328-debug]
-platform                = ${common.platform}
-board                   = ${common.board}
-framework               = ${common.framework}
-monitor_speed           = ${common.monitor_speed}
-monitor_port = COM4
-upload_port = COM*
-build_flags =
+platform = ${common.platform}
+board = ${common.board}
+framework = ${common.framework}
+monitor_speed = ${common.monitor_speed}
+monitor_port = ${common.port}
+upload_port = ${common.port}
+build_flags = ${common.compile_flags}
 	-DCLI_SUPPORT
 	-DDEBUG -DEXT_DEBUG -DCHGID_CMD
+lib_deps =
+	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
+	rlogiacco/CircularBuffer@^1.3.3
 
 [env:nanoatmega328new]
-platform                = ${common.platform}
-board 					= nanoatmega328new
-framework               = ${common.framework}
-monitor_speed           = ${common.monitor_speed}
-monitor_port = COM5
+platform = ${common.platform}
+board = nanoatmega328new
+framework = ${common.framework}
+monitor_speed = ${common.monitor_speed}
+monitor_port = ${common.port}
 upload_port = COM*
 debug_tool = simavr
 debug_build_flags = -Og -ggdb3 -g3
 build_flags = -DCLI_SUPPORT
 	-DDEBUG -DEXT_DEBUG
-
-; cli = 160 bytes RAM
+lib_deps =
+	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
+	rlogiacco/CircularBuffer@^1.3.3
 
 [env:simulation]
-platform                = ${common.platform}
-board 					= nanoatmega328new
-framework               = ${common.framework}
+platform = ${common.platform}
+board = nanoatmega328new
+framework = ${common.framework}
 test_build_project_src = yes
-;test_transport = native
 test_ignore = test_embedded
 debug_tool = simavr
 build_flags =
 	-DAVRSIM
 	-DDEBUG
-# debug_init_break =
 debug_build_flags = -Og -ggdb3 -g3
-
-
+lib_deps =
+	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
+	rlogiacco/CircularBuffer@^1.3.3
