--- a/platformio.ini
+++ b/platformio.ini
@@ -37,11 +37,11 @@ compile_flags_pro = ${common.compile_flags}
 	-Wshadow
 
 [env:nanoatmega328-deploy]
-platform                = ${common.platform}
-board                   = ${common.board}
-framework               = ${common.framework}
-monitor_speed           = ${common.monitor_speed}
-monitor_port = COM8
+platform = ${common.platform}
+board = ${common.board}
+framework = ${common.framework}
+monitor_speed = ${common.monitor_speed}
+monitor_port = ${common.port}
 upload_port = COM*
 build_flags = ${common.compile_flags_pro}
 	-DCLI_SUPPORT
@@ -53,22 +53,28 @@ extra_scripts =
   post:post_extra_script.py
 
 [env:nanoatmega328-debug]
-platform                = ${common.platform}
-board                   = ${common.board}
-framework               = ${common.framework}
-monitor_speed           = ${common.monitor_speed}
-monitor_port = COM4
-upload_port = COM*
-build_flags =
+platform = ${common.platform}
+board = ${common.board}
+framework = ${common.framework}
+monitor_speed = ${common.monitor_speed}
+monitor_port = ${common.port}
+upload_port = ${common.port}
+build_flags = ${common.compile_flags}
 	-DCLI_SUPPORT
 	-DDEBUG -DEXT_DEBUG -DCHGID_CMD
+lib_deps =
+	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
+	rlogiacco/CircularBuffer@^1.3.3
+debug_tool = simavr
+debug_build_flags = -Og -ggdb3 -g3 -DAVRSIM
 
 [env:nanoatmega328new]
-platform                = ${common.platform}
-board 					= nanoatmega328new
-framework               = ${common.framework}
-monitor_speed           = ${common.monitor_speed}
-monitor_port = COM5
+; equals the deploy
+platform = ${common.platform}
+board = nanoatmega328new
+framework = ${common.framework}
+monitor_speed = ${common.monitor_speed}
+monitor_port = ${common.port}
 upload_port = COM*
 debug_tool = simavr
 debug_build_flags = -Og -ggdb3 -g3
@@ -79,11 +85,10 @@ lib_deps =
 	rlogiacco/CircularBuffer@^1.3.3
 
 [env:simulation]
-platform                = ${common.platform}
-board 					= nanoatmega328new
-framework               = ${common.framework}
+platform = ${common.platform}
+board = nanoatmega328new
+framework = ${common.framework}
 test_build_project_src = yes
-;test_transport = native
 test_ignore = test_embedded
 debug_tool = simavr
 build_flags =
@@ -91,5 +96,9 @@ build_flags =
 	-DDEBUG
 	-DEXT_DEBUG
 debug_build_flags = -Og -ggdb3 -g3
+lib_deps =
+	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
+	rlogiacco/CircularBuffer@^1.3.3
 
 
+#debug_build_flags = -Og -ggdb3 -g3
