Add a pre script to generate a version based on the last git tag

--- a/platformio.ini
+++ b/platformio.ini
@@ -47,11 +47,11 @@ upload_port = ${common.port}
 build_flags = ${common.compile_flags_pro}
 	-DCLI_SUPPORT
 	-DDEBUG -DEXT_DEBUG
-	-Weffc++
 lib_deps =
 	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
 	rlogiacco/CircularBuffer@^1.3.3
 extra_scripts =
+  pre:pre_script.py
   post:post_extra_script.py
 
 [env:nanoatmega328-debug]
@@ -69,6 +69,8 @@ lib_deps =
 	rlogiacco/CircularBuffer@^1.3.3
 debug_tool = simavr
 debug_build_flags = -Og -ggdb3 -g3 -DAVRSIM
+extra_scripts =
+  pre:pre_script.py
 
 [env:nanoatmega328new]
 ; equals the deploy
@@ -85,6 +87,8 @@ build_flags = -DCLI_SUPPORT
 lib_deps =
 	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
 	rlogiacco/CircularBuffer@^1.3.3
+extra_scripts =
+  pre:pre_script.py
 
 [env:simulation]
 platform = ${common.platform}
@@ -100,6 +104,5 @@ debug_build_flags = -Og -ggdb3 -g3
 lib_deps =
 	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
 	rlogiacco/CircularBuffer@^1.3.3
-
 
 #debug_build_flags = -Og -ggdb3 -g3
