--- a/platformio.ini
+++ b/platformio.ini
@@ -61,6 +61,22 @@ framework = ${common.framework}
 monitor_speed = ${common.monitor_speed}
 monitor_port = ${common.port}
 upload_port = ${common.port}
+build_flags = ${common.compile_flags_pro}
+	-DCLI_SUPPORT
+	-DDEBUG -DEXT_DEBUG
+lib_deps =
+	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
+	rlogiacco/CircularBuffer@^1.3.3
+extra_scripts =
+  pre:pre_script.py
+
+[env:nanoatmega328-debug-corr]
+platform = ${common.platform}
+board = ${common.board}
+framework = ${common.framework}
+monitor_speed = ${common.monitor_speed}
+monitor_port = ${common.port}
+upload_port = ${common.port}
 build_flags = ${common.compile_flags}
 	-DCLI_SUPPORT
 	-DDEBUG -DEXT_DEBUG -DCHGID_CMD
