Set host alarm by alarmHandler only Stability and robostness on low level OneWire handling Channel cache

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,14 +19,10 @@ port = COM4
 compile_flags = -Wextra
 	-Wshadow
 	-Wmissing-noreturn
-
-#	-Wswitch-default ... annoying...
-
 compile_flags_pro = ${common.compile_flags}
 	-Wmissing-format-attribute
 	-Wformat-security
 	-Wmissing-declarations
-	-Wredundant-decls
 	-Winit-self
 	-Wundef
 	-Waggregate-return
@@ -37,6 +33,8 @@ compile_flags_pro = ${common.compile_flags}
 	-Winline
 	-Wshadow
 
+#	-Wredundant-decls
+
 [env:nanoatmega328-deploy]
 platform = ${common.platform}
 board = ${common.board}
@@ -46,13 +44,13 @@ monitor_port = ${common.port}
 upload_port = ${common.port}
 build_flags = ${common.compile_flags_pro}
 	-DCLI_SUPPORT
-	-DDEBUG -DEXT_DEBUG
+	-DDEBUG
 lib_deps =
 	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
 	rlogiacco/CircularBuffer@^1.3.3
 extra_scripts =
-  pre:pre_script.py
-  post:post_extra_script.py
+	pre:pre_script.py
+	post:post_extra_script.py
 
 [env:nanoatmega328-debug]
 platform = ${common.platform}
