--- a/platformio.ini
+++ b/platformio.ini
@@ -68,21 +68,17 @@ lib_deps =
 extra_scripts =
   pre:pre_script.py
 
-[env:nanoatmega328-debug-corr]
+[env:nanoatmega328-product]
 platform = ${common.platform}
 board = ${common.board}
 framework = ${common.framework}
 monitor_speed = ${common.monitor_speed}
 monitor_port = ${common.port}
 upload_port = ${common.port}
-build_flags = ${common.compile_flags}
-	-DCLI_SUPPORT
-	-DDEBUG -DEXT_DEBUG -DCHGID_CMD
+build_flags = ${common.compile_flags_pro}
 lib_deps =
 	pvizeli/CmdParser@0.0.0-alpha+sha.dcaa7eada9
 	rlogiacco/CircularBuffer@^1.3.3
-debug_tool = simavr
-debug_build_flags = -Og -ggdb3 -g3 -DAVRSIM
 extra_scripts =
   pre:pre_script.py
 
